# price_scout

./: .env.example  .gitignore  ARCHBOOK_BRIDGE_TEST.md  COLLABORATOR_INSTRUCTION.md  Cargo.toml  PROJECT_DASHBOARD.md  PYTHON_BRIDGE_REPORT.md  README.md  README_RUST.md  RUST_WORKSPACE_REPORT.md
ansible/inventory/: hosts.yml
config/: stores.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/db/: Cargo.toml
crates/db/examples/: test_connection.rs
crates/db/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/scraper/: Cargo.toml
crates/scraper/examples/: test_bridge_minimal.rs  test_python_bridge.rs
crates/scraper/src/: lib.rs  python_bridge.rs
docs/: API_DIAGNOSTICS_PLAN.md  API_ENDPOINTS.md  API_RESEARCH.md  CITILINK_USAGE.md  LEARNING_PATH.md  MARKET_RESEARCH.md  PARSING_STRATEGY.md  README.md  ROADMAP.md  TECH_STACK.md
migrations/: .gitignore  001_initial_schema.sql  002_seed_stores.sql  MIGRATION_REPORT.md  README.md  apply_migrations.sh
scripts/: advanced_bypass.py  avito_captcha_scraper.py  avito_scraper.sh  bypass_vpn.sh  check_my_ip.py  check_url.py  check_url_playwright.py  citilink_playwright.py  citilink_scraper.sh  collect_prices.py  dns_api_scraper.py  dns_auto.py  dns_firefox_auto.sh  dns_full_auto.sh  dns_qute_ipc.py  dns_qutebrowser.py  dns_rpa.py  dns_rpa_ocr.py  dns_scraper.sh  dns_stealth_max.py  dns_with_session.py  extract_dns_prices.py  find_macbook_price.py  ozon_scraper.sh  parse_citilink.py  parse_dns_prices.py  parse_local_ip.py  search_macbook.py  specs_filter.py  stealth_scraper.py  test_bridge_minimal.py  test_captcha_solver.py  test_dns_headful.py  test_dns_uc.py  test_marketplaces.py  test_playwright_citilink.py  test_playwright_dns.py  test_scrapers.py  test_search.py  test_specs_filter.py
