[workspace]
resolver = "2"
members = [
    "crates/models",
    "crates/db",
    "crates/api",
    "crates/bot",
    "crates/scraper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Price Scout Team"]
license = "MIT"
repository = "https://github.com/yourusername/price_scout"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client (for Python bridge)
reqwest = { version = "0.12", features = ["json"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
