[package]
name = "price-scout-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "price-scout-api"
path = "src/main.rs"

[dependencies]
price-scout-models = { path = "../models" }
price-scout-db = { path = "../db" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
