[package]
name = "price-scout-scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
price-scout-models = { path = "../models" }
price-scout-db = { path = "../db" }

tokio = { workspace = true, features = ["process", "io-util", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
